update svelte version, fix oas
