# src/routes/(protected)/projects/task/[task_id]/_modal/AddRelationModal.remote.ts
@@ -1,12 +1,6 @@
 import { form, getRequestEvent, query } from '$app/server';
-import { taskDependencyTypeEnum, taskDependencies } from '$lib/db/schemas/schema';
-import { validateForm } from '$lib/server/remote-fns';
-import z from 'zod';
-
-const GetTasksRequest = z.object({
-  projectId: z.string().uuid(),
-  excludeTaskIds: z.string().uuid().array().optional()
-});
+import { taskDependencies, taskDependencyTypeEnum } from '$lib/db/schemas/schema';
+import { AddRelationForm, GetTasksRequest } from './AddRelationModal.schemas';
 
 export const getTasks = query(GetTasksRequest, async (params) => {
   const { locals } = getRequestEvent();
@@ -20,33 +14,43 @@ export const getTasks = query(GetTasksRequest, async (params) => {
   return result;
 });
 
-const AddRelationForm = z.object({
-  task_id: z.string().uuid(),
-  related_task_id: z.string().uuid(),
-  dependency_type: z.enum(taskDependencyTypeEnum.enumValues)
-});
-
-export const addRelationForm = form(async (formData) => {
+export const addRelationForm = form(AddRelationForm, async (data) => {
   const { locals } = getRequestEvent();
 
-  const validatedReq = validateForm(formData, AddRelationForm);
+  const { related_task_id: relatedTaskId, task_id: taskId, dependency_type: dependencyType } = data;
 
-  if (!validatedReq.success) {
-    return { success: false, errors: validatedReq.error.formErrors };
-  }
-
-  const {
-    related_task_id: relatedTaskId,
-    task_id: taskId,
-    dependency_type: dependencyType
-  } = validatedReq.data;
-
-  try {
-    await locals.db.insert(taskDependencies).values({
+  let insertObj: typeof taskDependencies.$inferInsert;
+  if (dependencyType.endsWith(':invert')) {
+    insertObj = {
+      task_id: relatedTaskId,
+      depends_on_task_id: taskId,
+      dependency_type: dependencyType.replace(
+        ':invert',
+        ''
+      ) as (typeof taskDependencyTypeEnum.enumValues)[number]
+    };
+  } else {
+    insertObj = {
       task_id: taskId,
       depends_on_task_id: relatedTaskId,
-      dependency_type: dependencyType
-    });
+      dependency_type: dependencyType as (typeof taskDependencyTypeEnum.enumValues)[number]
+    };
+  }
+
+  // if (data.dependency_type.endsWith(':invert')) {
+  //   data.task_id = data.related_task_id;
+  //   data.related_task_id = page.params.task_id!;
+  //   data.dependency_type = data.dependency_type.replace(
+  //     ':invert',
+  //     ''
+  //   ) as AddRelationForm['dependency_type'];
+  // } else {
+  //   data.task_id = page.params.task_id!;
+  //   console.log(data);
+  // }
+
+  try {
+    await locals.db.insert(taskDependencies).values(insertObj);
   } catch (error) {
     console.error('Error adding relation:', error);
     return { success: false, errors: { form: ['Failed to add relation. Please try again.'] } };
